syntax = "proto3";
package users;
option go_package = "github.com/SHshzik/homework_crud/pkg/api/proto/users";

service UsersService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated User users = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {}
